Fixed overflowing layout for auth forms and small CSS changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@
 
     --primary-bg-color: #232730;
     --secondary-bg-color: #242424;
+    --border: 1px solid grey;
 }
 
 body {
